--- a/apropos.html
+++ b/apropos.html
@@ -58,7 +58,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -73,7 +73,7 @@
                     <a class="nav-link link text-secondary display-4" href="index.html#header11-8m">
                         Comment ça marche ?</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="rdvno1.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="essai.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
         </div>
     </nav>
 </section>
@@ -244,8 +244,7 @@ pour accélérer votre réflexion et avancer rapidement</p>
 quelque soit l'endroit où vous vous trouvez.<br>
 <br>Aussi appelé e-coaching, coaching à distance, web coaching, des études ont prouvé son efficacité au point de devenir une excellente alternative au séance en cabinet. A l'heure actuelle, il y a même des personnes qui auraient le temps de suivre des séances en cabinet, mais qui préférent les facilités d' une séance en ligne.<br><br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="essai.html">&gt; COMMENCER MAINTENANT</a>
-                    <a class="btn btn-md btn-white-outline display-7" href="#">DÉMO LIVE</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="essai.html">&gt; COMMENCEZ MAINTENANT</a></div>
             </div>
         </div>
     </div>
