--- a/jeunesse.html
+++ b/jeunesse.html
@@ -58,7 +58,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -73,7 +73,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
                     <a class="nav-link link text-secondary display-4" href="index.html#header11-8m">
                         Comment ça marche ?</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="rdvno1.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="essai.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
         </div>
     </nav>
 </section>
@@ -352,7 +352,7 @@ leurs réussites en fonction de vos besoins.</p>
     <div class="container">
         <div class="row main justify-content-center">
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="rdvno1.html">
+                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="essai.html">
                     ESSAYER MAINTENANT</a></div>
             </div>
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
@@ -404,7 +404,7 @@ leurs réussites en fonction de vos besoins.</p>
                 <h2 class="align-left mbr-bold mbr-fonts-style display-4"><span style="font-weight: normal;">Le coaching en ligne est un moyen pour un plus grand nombre de personnes de recevoir un service précieux d’une manière différente, </span><br><span style="font-weight: normal;">qui correspond mieux à leurs besoins et à leurs attentes.</span></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="rdvno1.html"><span class="mbri-touch-swipe mbr-iconfont mbr-iconfont-btn" style="font-size: 22px;"></span>ESSAYER MAINTENANT</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="essai.html"><span class="mbri-touch-swipe mbr-iconfont mbr-iconfont-btn" style="font-size: 22px;"></span>ESSAYER MAINTENANT</a></div>
             </div>
         </div>
     </div>
