--- a/offrez.html
+++ b/offrez.html
@@ -56,7 +56,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -71,7 +71,7 @@
                     <a class="nav-link link text-secondary display-4" href="index.html#header11-8m">
                         Comment ça marche ?</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="rdvno1.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="essai.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
         </div>
     </nav>
 </section>
