--- a/personnel.html
+++ b/personnel.html
@@ -58,7 +58,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -73,7 +73,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
                     <a class="nav-link link text-secondary display-4" href="index.html#header11-8m">
                         Comment ça marche ?</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="rdvno1.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="essai.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
         </div>
     </nav>
 </section>
@@ -116,7 +116,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-4"><br>Beaucoup d'entre nous,<br>traversent des moments difficiles, des expériences qui peuvent nous laisser confus, perdus, trahis, minés,&nbsp;méconnus ou vulnérables.&nbsp;<br>Je crois que nous pouvons survivre à ces défis, à ces traumatismes pour réhabiliter notre estime de soi, notre sérénité.<br>Le coaching permet de se projeter dans de nouvelles perspectives.<br><br><br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="rdvno1.html">&gt; COMMENCER</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="essai.html">&gt; COMMENCER</a>
                     <a class="btn btn-md btn-white-outline display-7" href="#">EN SAVOIR +</a></div>
             </div>
         </div>
