--- a/index.html
+++ b/index.html
@@ -753,12 +753,12 @@ pour réaliser vos ambitions avec passion.<br></p>
                 <h5 class="pb-3"><a href="index.html" class="text-white">
                     Coachinglab.fr</a></h5>
                 <p class="mbr-text">
-                    <a href="apropos.html" class="text-info">A propos</a><br><a href="index.html#header11-78" class="text-info">Comment ca marche&nbsp;</a>?<br><br><a href="contact.html">Me contacter aujourd'hui &gt;</a><br></p>
+                    <a href="apropos.html#features1-6u" class="text-info">A propos</a><br><a href="index.html#header11-8m" class="text-info">Comment ca marche&nbsp;</a>?<br><br><a href="contact.html">Me contacter aujourd'hui &gt;</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     <a href="index.html#content5-73" class="text-white">COACHING</a></h5>
-                <p class="mbr-text"><a href="personnel.html" class="text-danger">&gt; PERSONNEL &lt;</a><br><a href="personnel.html" class="text-danger"></a><a href="professionel.html" class="text-danger">&gt; ENTREPRISE &lt;</a>&nbsp;<br></p>
+                <p class="mbr-text"><a href="personnel.html" class="text-danger">&gt; PERSONNEL &lt;</a><br><a href="personnel.html" class="text-danger"></a><a href="entreprise.html" class="text-danger">&gt; ENTREPRISE &lt;</a>&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
