--- a/rdv.html
+++ b/rdv.html
@@ -104,12 +104,12 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 50%;">
+            <div class="mbr-figure" style="width: 55%;">
                 <a href="index.html"><img src="assets/images/www.coachinglab.fr-1.gif" alt="" title=""></a>
             </div>
 
             <div class="media-content">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong><br></strong><br><strong>RESERVER
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong><br></strong><strong>RESERVER
 </strong><div><strong>VOTRE SEANCE</strong></div></h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
